# villa-py

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
example/: example.py  handle_func.py  multiple_bots.py  send_message.py  single_bot.py  vercel.py
villa/: __init__.py  bot.py  event.py  exception.py  handle.py  log.py  message.py  models.py  store.py  typing.py  utils.py
