[tool.poetry]
name = "villa"
version = "0.4.1"
description = "米游社大别野Bot Python SDK。MiHoYo Villa Bot Python SDK."
authors = ["CMHopeSunshine <277073121@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/CMHopeSunshine/villa-py"
repository = "https://github.com/CMHopeSunshine/villa-py"
documentation = "https://github.com/CMHopeSunshine/villa-py"
keywords = ["mihoyo", "bot", "villa"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["uvicorn"], version = "^0.96.0"}
uvicorn = "^0.22.0"
httpx = "^0.24.1"
loguru = "^0.7.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^23.1.0"
pre-commit = "^3.1.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.pycln]
path = "."


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
